--- a/Obligatorio/resources/css/common.css
+++ b/Obligatorio/resources/css/common.css
@@ -1,12 +1,3 @@
-/*
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
-*/
-/* 
-    Created on : 01/03/2015, 06:27:31 PM
-    Author     : Alec
-*/
 .loadingOverlay
 {
     display:none;
@@ -23,4 +14,11 @@ and open the template in the editor.
 .hide
 {
     display:none;
+}
+
+#alerts
+{
+    position: absolute;
+     width: 50%; 
+    margin-left: 10%;   
 }
