--- a/Obligatorio/resources/css/main.css
+++ b/Obligatorio/resources/css/main.css
@@ -184,37 +184,37 @@ textarea {
 }
 
 .quote footer {
-  color: #c1c1c1;
+    color: #c1c1c1;
 }
 
 .footer {
-  padding: 20px 0;
+    padding: 20px 0;
 }
 
 /* Sticky footer styles
 -------------------------------------------------- */
 html {
-  position: relative;
-  min-height: 100%;
+    position: relative;
+    min-height: 100%;
 }
 
 .footer {
-  margin-top: 50px;
-  bottom: 0;
-  width: 100%;
-  /* Set the fixed height of the footer here */
-  height: 200px;
+    margin-top: 50px;
+    bottom: 0;
+    width: 100%;
+    /* Set the fixed height of the footer here */
+    height: 200px;
 }
 .footer {
-  color: #efefef;
-  background-color: #222;
+    color: #efefef;
+    background-color: #222;
 }
 .footer a {
-  color: #9af7fe;
+    color: #9af7fe;
 }
 @media only screen and (max-width: 768px) {
-  body { margin-bottom: 400px; }
-  .footer { height: 200px; }
+    body { margin-bottom: 400px; }
+    .footer { height: 200px; }
 }
 
 /*
@@ -259,9 +259,9 @@ html {
 }
 
 @media print,
-       (-o-min-device-pixel-ratio: 5/4),
-       (-webkit-min-device-pixel-ratio: 1.25),
-       (min-resolution: 120dpi) {
+(-o-min-device-pixel-ratio: 5/4),
+(-webkit-min-device-pixel-ratio: 1.25),
+(min-resolution: 120dpi) {
     /* Style adjustments for high resolution devices */
 }
 
@@ -361,4 +361,44 @@ html {
 .error{
     color: red;
     font-style: italic
+}
+
+body{
+    // background-image: url("../img/movieBackground.jpg");
+    background-color: #31b0d5; 
+    background-size: 100% 100%;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
+.contentContainer{
+    background-color: white;
+    background-size: 100% 100%;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
+#videoDetails{
+    position: absolute;
+    width: auto;
+    height: auto;
+    background-color: #efefef;
+    z-index: 1;
+    border-radius: 10px;
+}
+
+@media (min-width: 768px) {
+  #videoDetails {
+    width: 750px;
+  }
+}
+@media (min-width: 992px) {
+  #videoDetails {
+    width: 970px;
+  }
+}
+@media (min-width: 1200px) {
+  #videoDetails {
+    width: 1170px;
+  }
 }
