--- a/Obligatorio/resources/css/common.css
+++ b/Obligatorio/resources/css/common.css
@@ -19,6 +19,7 @@
 #alerts
 {
     position: absolute;
-     width: 50%; 
-    margin-left: 10%;   
+    width: 50%; 
+    margin-left: 10%;  
+    z-index: 50;
 }
