New Vid Details section

--- a/Obligatorio/resources/css/main.css
+++ b/Obligatorio/resources/css/main.css
@@ -386,6 +386,10 @@ body{
     z-index: 3;
     border-radius: 10px;
 }
+.videoDetails
+{
+    background-color: #efefef;
+}
 
 @media (min-width: 768px) {
     #videoDetails {
