new columns in manage videos

--- a/Obligatorio/resources/css/common.css
+++ b/Obligatorio/resources/css/common.css
@@ -23,3 +23,8 @@
     margin-left: 10%;  
     z-index: 50;
 }
+.btn.active.focus, .btn.active:focus, .btn.focus, .btn:active.focus, .btn:active:focus, .btn:focus
+{
+    outline: none;
+    outline-offset: 0px;
+}
