--- a/Obligatorio/resources/css/common.css
+++ b/Obligatorio/resources/css/common.css
@@ -71,10 +71,20 @@ iframe
     border: 2px solid rgba(156, 156, 156, 0.37);
     -ms-border-radius: 6px;
 /*    border-radius: 6px;*/
+      background: #41A9B2;
 }
 
 #videosContainer .videoDetails
 {
     background: none;
     color: #41A9B2;
+}
+
+.star-rating > input
+{
+    cursor:pointer;
+}
+.portfolio-item
+{
+    padding-bottom: 6px;
 }
