--- a/Obligatorio/resources/css/main.css
+++ b/Obligatorio/resources/css/main.css
@@ -376,6 +376,7 @@ body{
     background-size: 100% 100%;
     background-position: center;
     background-repeat: no-repeat;
+    min-height: 400px;
 }
 
 #videoDetails{
