--- a/Obligatorio/resources/css/main.css
+++ b/Obligatorio/resources/css/main.css
@@ -387,10 +387,14 @@ body{
     z-index: 3;
     border-radius: 10px;
 }
-/*.videoDetails
-{
-    background-color: #efefef;
-}*/
+textarea{
+    resize:none;
+}
+
+.form-group-inline{
+    display: inline-block;  
+    width: 45%;
+}
 
 @media (min-width: 768px) {
     #videoDetails {
